# spyglass-dev

./: .git-blame-ignore-revs  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  check-code.yml  check-commit-message.yml  label-actions.yml  pull-request.yml  release.yml
docs/adr/: 002_main_stream_pixel_format.md
resources/: spyglass.conf  system-dependencies.json
scripts/: build_deb.sh  spyglass
spyglass/: __init__.py  __main__.py  camera_options.py  cli.py  exif.py  url_parsing.py
spyglass/camera/: __init__.py  camera.py  csi.py  lazy_encoder.py  usb.py
spyglass/server/: controls.py  http_server.py  jpeg.py  webrtc_whep.py
tests/: test_camera_configure.py  test_cli.py  test_exif.py  test_lazy_encoder.py  test_url_parsing.py
typings/: Readme.md
typings/libcamera/: __init__.pyi  _libcamera.pyi
typings/picamera2/: __init__.pyi  configuration.pyi  controls.pyi  converters.pyi  dma_heap.pyi  formats.pyi  job.pyi  metadata.pyi  picamera2.pyi  platform.pyi  remote.pyi  request.pyi  sensor_format.pyi  utils.pyi
typings/picamera2/allocators/: __init__.pyi  allocator.pyi  dmaallocator.pyi  libcameraallocator.pyi  persistent_allocator.pyi
typings/picamera2/devices/: __init__.pyi
typings/picamera2/encoders/: __init__.pyi  encoder.pyi  h264_encoder.pyi  jpeg_encoder.pyi  libav_h264_encoder.pyi  libav_mjpeg_encoder.pyi  mjpeg_encoder.pyi  multi_encoder.pyi  v4l2_encoder.pyi
typings/picamera2/outputs/: __init__.pyi  circularoutput.pyi  circularoutput2.pyi  ffmpegoutput.pyi  fileoutput.pyi  output.pyi  pyavoutput.pyi  splittableoutput.pyi
typings/picamera2/previews/: __init__.pyi  drm_preview.pyi  gl_helpers.pyi  null_preview.pyi  q_gl_picamera2.pyi  q_picamera2.pyi  qt.pyi  qt_compatibility.pyi  qt_previews.pyi
