[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "spyglass"
version = "0.17.0"
description = "A simple mjpeg server for Picamera2"
authors = [
    { name="mryel00" },
    { name="roamingthings" }
]
license = "GPL-3.0-only"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.9"
dependencies = [
    "aiortc~=1.13.0",
]

[project.scripts]
spyglass = "spyglass.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]

[tool.commitizen]
name = "cz_customize"
version = "0.17.0"
tag_format = "v$version"
version_files = [
    "spyglass/__version__.py",
    "setup.cfg:version",
    "pyproject.toml:version",
    "README.md:Current version"
]

[tool.commitizen.customize]
bump_map = {"break" = "MAJOR", ".*!" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "chore\\(deps\\)" = "PATCH"}
commit_parser = "^(?P<change_type>break|feat|fix|chore\\(deps\\))(!)?:\\s(?P<message>.*)?"
change_type_map = {"feat" = "Feat", "fix" = "Fix", "chore(deps)" = "Dependency Update"}
